Added more information to projects and fixed layout for small screens
Added more sections to each project page, with extra information and an image. Also fixed the layout for small screens, on the home page the projects grid is now displayed correctly, and each project page has been formatted as well.

--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -73,4 +73,35 @@
         </div>
     </section>
 
+    <section class="FourthSection">
+        <div class="Text">
+            <p>This project allowed me to learn about some of the fundamental mathematical concepts used within games development, such as vectors, motion, physics and linear interpolation. I also discovered some more advanced topics, like procedural generation, matrices, and different pathfinding algorithms and techniques. Together, this allowed me to get a greater understanding of the different mathematical components that make up a game, and how they work together to create more advanced and interesting simulations.</p>
+        </div>
+        <div class = "Image">
+            <img src = "img\StarMapNavigationImage4.png">
+        </div>
+    </section>
+
+    <section class="FifthSection">
+        <div class = "Image">
+            <img src = "img\StarMapNavigationImage5.png">
+        </div>
+        <div class="Text">
+            <p>As my main interest lies in gameplay programming, I addded some gameplay mechanics to make my simulation more game like. I added the option to 'colonise' the star the players ship is currently located at, which gives the player the opportunity to rename the star to whatever they like (with limitations in place to prevent errors with names). This action also grants more fuel to the ship, allowing the player to continue on their journey. If the player is travelling through a star that exists in 'pirate space', there is a small chance of them being attacked by pirates, which results in a reduction of fuel. When the player runs out of fuel, they can no longer travel between stars, and the game is over.</p>
+        </div>
+    </section>
+
+    <script>
+
+        var sidemenu = document.getElementById("sidemenu");
+    
+        function openmenu(){
+            sidemenu.style.right = "0";
+        }
+        function closemenu(){
+            sidemenu.style.right = "-300px";
+        }
+    
+    </script>
+
 </body>
