--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -48,13 +48,13 @@
             <img src = "img\ThrowYourFriendsImage1.png">
         </div>
         <div class="Text">
-            <p>As the solo programmer on the team, it was my responsibilty to write most of the code for the mechanics and systems in order to bring the designers ideas to life. For the player controller, I used Unity's new input system to make the integration of local multiplayer more efficient, and a state machine to have greater control over when and how the player interacts with the world around them. I used a combination of force, torque and bounciness to create a fun yet satisfying throwing mechanic to allow players to use their team mates as their weapon against enemies.</p>
+            <p>As the solo programmer on the team, it was my responsibilty to write most of the code for the mechanics and systems in order to bring the designers ideas to life. For the player controller, I used Unity's new input system to make the integration of local multiplayer more efficient, and a state machine to have greater control over when and how the player interacts with the world around them. I used a combination of force, torque and bounciness to create a fun yet satisfying throwing mechanic to allow players to use their team mates as their weapon against enemies. The photo opposite shows a prototype of the core mechanics, during the early stages of development.</p>
         </div>
     </section>
 
     <section class="SecondSection">
         <div class="Text">
-            <p>Enemy AI was elaborated on across the life cycle of the project, where we tweaked the systems based on feedback we recieved from playtest sessions. Features were added such as a customisable enemy wave spawner, and keeping the bodies of the enemies in the level once they were killed so that players could pick them up and use them as weapons. Re-usable level mechanics we made for puzzle sections that the players would have to complete once all enemies had been defeated.</p>
+            <p>Enemy AI was elaborated on across the life cycle of the project, where we tweaked the systems based on feedback we recieved from playtest sessions. Features were added such as a customisable enemy wave spawner, and keeping the bodies of the enemies in the level once they were killed so that players could pick them up and use them as weapons. Re-usable level mechanics we made for puzzle sections that the players would have to complete once all enemies had been defeated. The photo opposite shows the first level of the game, the layout and models were made by 1 of the teams designers, and the textures made by 1 of the teams artists.</p>
         </div>
         <div class = "Image">
             <img src = "img\ThrowYourFriendsImage2.png">
@@ -66,8 +66,47 @@
             <img src = "img\ThrowYourFriendsImage3.png">
         </div>
         <div class="Text">
-            <p>Extra features were included towards the end of the project, such as UI to display useful information to the players, sound effects, and a custom music looper. I created a main menu and in game pause menu, where the game's settings could be adjusted, which was saved so that the values persisted when closing and re-opening the application. Some simple effects were implemented to help polish up the project, such as particles, camera shake and animations.</p>
+            <p>I included extra features towards the end of the project, such as UI to display useful information to the players, sound effects, and a custom music looper. I created a main menu and in game pause menu, where the game's settings could be adjusted, which was saved so that the values persisted when closing and re-opening the application. Some simple effects were implemented to help polish up the project, such as particles, camera shake and animations. The photo opposite shows the second level of the game, the layout, and models were made by another of our teams designers, and the textures were made by one of our teams artists.</p>
         </div>
     </section>
 
+    <section class="FourthSection">
+        <div class="Text">
+            <p>I also gained experience with playtest sessions and collecting feedback about our game. Our team created a survey, asking questions about what we thought were the most important aspects of the game. With the collected results, I was tasked with creating a data sheet with statistics and the most common answers, so we could see the areas of our project we needed to work on the most. This allowed me to understand how to collect feedback about a game, and use it to make improvements and fix bugs that we otherwise wouldn't have known about. The photo opposite shows the main lobby before starting the game. The layout and models were made by one of our teams designers, and the textures being made by 1 of our teams artists.</p>
+        </div>
+        <div class = "Image">
+            <img src = "img\ThrowYourFriendsImage4.png">
+        </div>
+    </section>
+
+    <section class="FifthSection">
+        <div class = "Image">
+            <img src = "img\ThrowYourFriendsImage5.png">
+        </div>
+        <div class="Text">
+            <p>This project allowed me to learn about rapid prototyping for games. I gained the skills required for quickly developing mechanics and gameplay ideas, to test out how well they work, and if they're fun or not. I also gained experience working within a team context, allowing me to grow my communication skills, as well as get a better understanding of the game development pipeline while working with a team of other people. I was able to recieve concepts from designers, and bring them to life to see how different mechanics work on their own, or with integration with other parts of the project. The photo opposite shows a prototype of the core mechanics being used against enemies during the early stages of development.</p>
+        </div>
+    </section>
+
+    <section class="SixthSection">
+        <div class="Text">
+            <p>Our project was also chosen to be displayed at the universities end of year showcase, COMX. Our game was 1 of 4 selected teams to have a stall at COMX, where we were honoured to present our game to the public and members of the industry. Our team gained the experience required for getting a build of our game ready for a showcase event, as well as talking to people about our project to promote it and discuss what it is about.</p>
+        </div>
+        <div class = "Image">
+            <img src = "img\ThrowYourFriendsImage6.png">
+        </div>
+    </section>
+
+    <script>
+
+        var sidemenu = document.getElementById("sidemenu");
+    
+        function openmenu(){
+            sidemenu.style.right = "0";
+        }
+        function closemenu(){
+            sidemenu.style.right = "-300px";
+        }
+    
+    </script>
 </body>
