--- a/Boids.html
+++ b/Boids.html
@@ -73,4 +73,44 @@
         </div>
     </section>
 
+    <section class="FourthSection">
+        <div class="Text">
+            <p>During this project, I also had the opportunity to do code reviews with my peers. I gained experience with showing my code to other people, and having them review it, as well as reviewing other peoples code to find what works well, and areas for potential improvement. It allowed me to get a deeper understanding for how to look at for parts of code that code be made more efficient, as well as where appropriate algorithms code be implemented for cleaner and more robust code.</p>
+        </div>
+        <div class = "Image">
+            <img src = "img\BoidsImage4.png">
+        </div>
+    </section>
+
+    <section class="FifthSection">
+        <div class = "Image">
+            <img src = "img\BoidsImage5.png">
+        </div>
+        <div class="Text">
+            <p>Additionally, I learned about unit testing, where I gained knowledge on how to test various aspects of a project, either on their own or working in conjunction with other systems, and document the result. At various stages of the projects life cycle, I reviewed the required mechanics, and anaylysed they're behaviour to tell they were performing as they were supposed to, if there was any issues, bugs to fix, and potential areas of improvement. This was valueable as it allowed me to assess my own work, and judge what could be done better, and if there was more efficient solutions to the ones I had originally came up with.</p>
+        </div>
+    </section>
+
+    <section class="SixthSection">
+        <div class="Text">
+            <p>Being a gameplay programmer, I decided to add something that allowed the player to interact with the simulation in some way. As most of the moving components were AI agents, the player wouldn't be able to control them specifically, so I added the ability to create obstacles that could be moved around the level to affect the behaviour of the boids. Being space themed, the player can add in 1 piece of debris at a time, with a maximum of 10 pieces allowed to exist in the level at any one time. The player can click on the obstacle they've made and it will follow the mouse cursor. When the player clicks again, it will release the obstacle. The player can decide to move objects in a more slow and controlled manner, or chuck them around freely. If an obstacle leaves the levels navigation radius, it will gradually move back towards the centre. The boids can detect whether they are near an obstacle and will attempt to move away from it. I developed a small, simple mechanic as I wanted to allow the player some degree of interaction and control over the boids flying around the scene.</p>
+        </div>
+        <div class = "Image">
+            <img src = "img\BoidsImage6.png">
+        </div>
+    </section>
+
+    <script>
+
+        var sidemenu = document.getElementById("sidemenu");
+    
+        function openmenu(){
+            sidemenu.style.right = "0";
+        }
+        function closemenu(){
+            sidemenu.style.right = "-300px";
+        }
+    
+    </script>
+
 </body>
