--- a/Boids.html
+++ b/Boids.html
@@ -41,8 +41,8 @@
         <div class = "Video">
             <video width="1920" height="1080" controls>
                 <source src="videos\BoidShowreel.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-              </video>
+                Your browser does not support videos.
+            </video>
         </div>
     </section>
 
