--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -36,7 +36,7 @@
             <div class="Text">
                 <h1>THROW YOUR FRIENDS</h1>
                 <div class="line"></div>
-                <p>Throw Your Friends was a university group project where we were tasked with making a local co-op game where players had to work together to achieve a common goal. Our team consisted of 1 programmer, which was myself, 2 designers, and 2 artists. The game was about picking up and throwing your teammates at enemies using fun physics in order to defeat them and progress through a castle. The game was made in 4 months using Unity using C#</p>
+                <p>Throw Your Friends was a university group project where we were tasked with making a local co-op game where players had to work together to achieve a common goal. Our team consisted of 1 programmer, which was myself, 2 designers, and 2 artists. The game was about picking up and throwing your teammates at enemies using fun physics in order to defeat them and progress through a castle. The game was made in 4 months using Unity and C#</p>
             </div>
             <div class = "Video">
                 <video width="1920" height="1080" controls>
@@ -51,7 +51,7 @@
             <img src = "img\ThrowYourFriendsImage1.png">
         </div>
         <div class="Text">
-            <p>As the solo programmer on the team, it was my responsibility to write most of the code for the mechanics and systems in order to bring the designer's ideas to life. For the player controller, I used Unity's new input system to make the integration of local multiplayer more efficient, and a state machine to have greater control over when and how the player interacts with the world around them. I used a combination of force, torque, and bounciness to create a fun yet satisfying throwing mechanic to allow players to use their teammates as their weapon against enemies. The photo here shows a prototype of the core mechanics, during the early stages of development.</p>
+            <p>As the solo programmer on the team, it was my responsibility to write most of the code for the mechanics and systems in order to bring the designer's ideas to life. For the player controller, I used Unity's new input system to make the integration of local multiplayer more efficient, and a state machine to have greater control over when and how the player interacts with the world around them. I used a combination of force, torque, and bounciness to create a fun yet satisfying throwing mechanic to allow players to use their teammates as their weapon against enemies. The photo here shows a prototype of the core mechanics, during the early stages of development. </p>
         </div>
     </section>
 
