--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -69,13 +69,13 @@
             <img src = "img\StarMapNavigationImage3.png">
         </div>
         <div class="Text">
-            <p>I created a custom lerp library to move a space ship across the route selected by the player. To make the system more efficient, the types of lerps are stored as an enumeration, so it is more human-readable when choosing the desired lerp to trigger. I used an object-oriented aproach when designing the lerping function, and used polymorphism so that the same function can be called, and depending on the parameters passed in the results will vary. I also allowed the option to choose which aspect of an object is affected by the lerp, such as movement, rotation, color, and more</p>
+            <p>I created a custom lerp library to move a spaceship across the route selected by the player. To make the system more efficient, the types of lerps are stored as an enumeration, so it is more human-readable when choosing the desired lerp to trigger. I used an object-oriented approach when designing the lerping function, and used polymorphism so that the same function can be called, and depending on the parameters passed in the results will vary. I also allowed the option to choose which aspect of an object is affected by the lerp, such as movement, rotation, colour, and more.</p>
         </div>
     </section>
 
     <section class="FourthSection">
         <div class="Text">
-            <p>This project allowed me to learn about some of the fundamental mathematical concepts used within games development, such as vectors, motion, physics and linear interpolation. I also discovered some more advanced topics, like procedural generation, matrices, and different pathfinding algorithms and techniques. Together, this allowed me to get a greater understanding of the different mathematical components that make up a game, and how they work together to create more advanced and interesting simulations.</p>
+            <p>This project allowed me to learn about some of the fundamental mathematical concepts used within games development, such as vectors, motion, physics,  and linear interpolation. I also discovered some more advanced topics, like procedural generation, matrices, and different pathfinding algorithms and techniques. Together, this allowed me to get a greater understanding of the different mathematical components that make up a game, and how they work together to create more advanced and interesting simulations.</p>
         </div>
         <div class = "Image">
             <img src = "img\StarMapNavigationImage4.png">
@@ -87,7 +87,7 @@
             <img src = "img\StarMapNavigationImage5.png">
         </div>
         <div class="Text">
-            <p>As my main interest lies in gameplay programming, I addded some gameplay mechanics to make my simulation more game like. I added the option to 'colonise' the star the players ship is currently located at, which gives the player the opportunity to rename the star to whatever they like (with limitations in place to prevent errors with names). This action also grants more fuel to the ship, allowing the player to continue on their journey. If the player is travelling through a star that exists in 'pirate space', there is a small chance of them being attacked by pirates, which results in a reduction of fuel. When the player runs out of fuel, they can no longer travel between stars, and the game is over.</p>
+            <p>As my main interest lies in gameplay programming, I added some gameplay mechanics to make my simulation more game like. I added the option to 'colonise' the star the players ship is currently located at, which gives the player the opportunity to rename the star to whatever they like (with limitations in place to prevent errors with names). This action also grants more fuel to the ship, allowing the player to continue their journey. If the player is travelling through a star that exists in 'pirate space', there is a small chance of them being attacked by pirates, which results in a reduction of fuel. When the player runs out of fuel, they can no longer travel between stars, and the game is over.</p>
         </div>
     </section>
 
