Updated layout for larger screens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="content">
                 <h1>LUKE MOSELEY</h1>
                 <h4>GAMEPLAY PROGRAMMER</h4>
-                <p>Hello! I'm Luke, a second year Computer Games Programming student at the University of Gloucestershire who loves to implement engaging gameplay systems. Whether I'm tuning the enemies difficulty, or tweaking the players jump, I'm always looking for that little detail that can be changed to make the game feel just right. Feel free to check out my portfolio and see some of the projects I've worked on.</p>
+                <p>Hello! I'm Luke, a second year Computer Games Programming student at the University of Gloucestershire, who loves to implement engaging gameplay systems. Whether I'm tuning the enemies difficulty, or tweaking the players jump, I'm always looking for that little detail that can be changed to make the game feel just right. Feel free to check out my portfolio and see some of the projects I've worked on.</p>
             </div>
         </div>
     </div>
@@ -132,8 +132,8 @@
     <div id="contact">
         <div class="contact-section">
             <h2>CONTACT</h2>
-            <h5><i class="fa-regular fa-envelope"></i> lukemoseley@outlook.com</h5>
-            <h5><i class="fa-brands fa-linkedin"></i> LinkedIn</h5>
+            <h5><i class="fa-regular fa-envelope"></i> lukemoseley15@outlook.com</h5>
+            <h5><i class="fa-brands fa-linkedin"></i> linkedin.com/in/luke-moseley-79013a2ab</h5>
         </div>
     </div>
     <!----footer---->
