Added hyperlink for LinkedIn

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
         <div class="contact-section">
             <h2>CONTACT</h2>
             <h5><i class="fa-regular fa-envelope"></i> lukemoseley15@outlook.com</h5>
-            <h5><i class="fa-brands fa-linkedin"></i> linkedin.com/in/luke-moseley-79013a2ab</h5>
+            <a href="https://linkedin.com/in/luke-moseley-79013a2ab">
+                <h5><i class="fa-brands fa-linkedin"></i> linkedin.com/in/luke-moseley-79013a2ab</h5>
+            </a>
         </div>
     </div>
     <!----footer---->
