--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h5><i class="fa-regular fa-envelope"></i> lukemoseley15@outlook.com</h5>
             <a href="https://linkedin.com/in/luke-moseley-79013a2ab">
                 <h5><i class="fa-brands fa-linkedin"></i> linkedin.com/in/luke-moseley-79013a2ab</h5>
-                <a href="img\LukeMoseley_CV.pdf" download><h5>Download CV</h5></a>
+                <a href="img\LukeMoseley_CV.pdf" download><h5><i class="fa-solid fa-file"></i> Download CV</h5></a>
             </a>
         </div>
     </div>
