Small Project Information Update

--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -57,7 +57,7 @@
 
     <section class="SecondSection">
         <div class="Text">
-            <p>I implemented an A* pathfinding algorithm from scratch for this project. My approach involved using psuedo code to outline the general theory, and then convert that into the desired programming language, which in this case was C#. The algorithm can detect when a destination is impossible to reach, demonstrated in my project when the player selects a star that has no route connecting to it. I aslo created a 'pirate space' zone, where the costs of all routes existing in this space are multiplied, which shows how the algorithm can adapt and look for a route that avoids traveling through this, even if it means going a longer way around.</p>
+            <p>I implemented an A* pathfinding algorithm from scratch for this project. My approach involved using psuedo code to outline the general theory, and then convert that into the desired programming language, which in this case was C#. The algorithm can detect when a destination is impossible to reach, demonstrated in my project when the player selects a star that has no route connecting to it. I aslo created a 'pirate space' zone, where the costs of all routes existing in this space are multiplied causing more expensive routes, which shows how the algorithm can adapt and look for a route that avoids traveling through this, even if it means going a longer way around.</p>
         </div>
         <div class = "Image">
             <img src = "img\StarMapNavigationImage2.png">
