--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -93,7 +93,7 @@
 
     <section class="SixthSection">
         <div class="Text">
-            <p>Our project was also chosen to be displayed at the universities end of year showcase, COMX. Our game was 1 of 4 selected teams to have a stall at COMX, where we were honoured to present our game to the public and members of the industry. As a team, we gained the experience required for getting a build of our game ready for a showcase event, as well as talking to people about our project to promote it and discuss what it was about.</p>
+            <p>Our project was also chosen to be displayed at the universities end of year showcase, COMX. Our game was 1 of 4 selected teams to have a stall at COMX, where we were honoured to present our game to the public and members of the industry. As a team, we gained the experience required for getting a build of our game ready for a showcase event, as well as talking to people about our project to discuss and promote it.</p>
         </div>
         <div class = "Image">
             <img src = "img\ThrowYourFriendsImage6.png">
