--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="about-text">
                     <h2>ABOUT ME</h2>
                     <h5>GAMEPLAY PROGRAMMER</h5>
-                    <p>I'm currently a second year student studying Computer Games Programming at the University of Gloucestershire. I always look forward to opportunities where I can develop my skills, as to become a more efficient developer and gain a further understanding of how gameplay mechanics work. I've worked on both solo and team projects, learning about a variety of different tools and concepts used within the games development field. Outside of university work, I also work on my own games and have participated in game jams.</p>
+                    <p>I'm currently a second year student studying Computer Games Programming at the University of Gloucestershire. I always look forward to opportunities where I can develop my skills, as to become a more efficient developer and gain a further understanding of how to design and implement gameplay mechanics. I've worked on both solo and team projects, learning about a variety of different tools and concepts used within the games development field. Outside of university work, I also work on my own games and have participated in game jams.</p>
             </div>
         </section>
     </div>
