Added links to project repositories
Added a link in each project page to navigate to the repository on GitHub

--- a/Boids.html
+++ b/Boids.html
@@ -37,6 +37,7 @@
             <h1>BOIDS SIMULATION</h1>
             <div class="line"></div>
             <p>Boids simulation was a solo project about demonstrating steering and flocking behaviours within a set of AI agents. I've expanded on the basic principles of boid movement to create more advanced behaviour, and also included optimisation techniques such as multi-threading and an oct-tree. This project was made in Unreal Engine 5 with C++.</p>
+            <a href="https://github.com/Lucidevz/BoidSimulation"><p class="RepositoryLink">(GitHub Repository)</p></a>
         </div>
         <div class = "Video">
             <video width="1920" height="1080" controls>
