--- a/StarMapNavigation.html
+++ b/StarMapNavigation.html
@@ -37,6 +37,7 @@
             <h1>STAR MAP NAVIGATION</h1>
             <div class="line"></div>
             <p>Star Ship Navigation was a solo university project about demonstrating an A* path finding algorithm and fundamental mathematical principles used within computer games programming. This project demonstrates procedural generation, a custom lerp library, and A* pathfinding that adjusts to a variety of constraints and variables. I used Unity and C# for this project.</p>
+            <a href="https://github.com/Lucidevz/StarShipNavigation"><p class="RepositoryLink">(GitHub Repository)</p></a>
         </div>
         <div class = "Video">
             <video width="1920" height="1080" controls>
