--- a/ThrowYourFriends.html
+++ b/ThrowYourFriends.html
@@ -37,6 +37,7 @@
                 <h1>THROW YOUR FRIENDS</h1>
                 <div class="line"></div>
                 <p>Throw Your Friends was a university group project where we were tasked with making a local co-op game where players had to work together to achieve a common goal. Our team consisted of 1 programmer, which was myself, 2 designers, and 2 artists. The game was about picking up and throwing your teammates at enemies using fun physics in order to defeat them and progress through a castle. The game was made in 4 months using Unity and C#</p>
+                <a href="https://github.com/Lucidevz/ThrowYourFriends"><p class="RepositoryLink">(GitHub Repository)</p></a>
             </div>
             <div class = "Video">
                 <video width="1920" height="1080" controls>
